--- a/requirements.txt
+++ b/requirements.txt
@@ -52,7 +52,7 @@ pySmartDL==1.3.4
 PySocks==1.7.1
 pyttsx3==2.90
 pytweening==1.0.4
-pywin32==305
+# pywin32==305
 requests==2.28.2
 scikit-learn==1.2.2
 scipy==1.10.1
