--- a/requirements.txt
+++ b/requirements.txt
@@ -44,21 +44,21 @@ PyGetWindow==0.0.9
 pyjsparser==2.7.1
 PyMsgBox==1.0.9
 pyperclip==1.8.2
-pypiwin32==223
+# pypiwin32==223
 PyPrind==2.11.3
 PyRect==0.2.0
 PyScreeze==0.1.28
 pySmartDL==1.3.4
 PySocks==1.7.1
 pyttsx3==2.90
-pytweening==1.0.4
+# pytweening==1.0.4
 # pywin32==305
 requests==2.28.2
-scikit-learn==1.2.2
-scipy==1.10.1
-selenium==4.9.1
+# scikit-learn==1.2.2
+# scipy==1.10.1
+# selenium==4.9.1
 six==1.16.0
-sklearn==0.0.post1
+# sklearn==0.0.post1
 sniffio==1.3.0
 sortedcontainers==2.4.0
 soundfile==0.12.1
